mappers refactoring finished and some other thing applied